OpenVi 7.0.16 -> OpenVi 7.1.17-dev: Sat Apr 9 21:00:26 2022
        + Check tkp->output != NULL before taking strlen for both command
          mappings and input mappings; this adds a missing check for command
          mappings and simplifies the input mappings; ok millert@
        + From upstream man page, add missing comma; ok jmc@
        + Update documentation

OpenVi 7.0.15 -> OpenVi 7.1.16: Sun Mar 13 22:10:37 2022
        + Document that PCC (Portable C Compiler) is working
        + Add a BSD make wrapper that calls gmake if available
        + Add OpenBSD basename functionality for use with xinstall
        + Simplify compatibility headers
        + Make `sstrip` target depend on the `strip` target, since many
          platforms do not support all the sstrip options, so still stripping
          as much as is possible is the most user-friendly thing to try.
        + Add support for Solaris; tested on Oracle Solaris 11.4.0 with GCC,
          Clang (V6+), and the Oracle Developer Studio V12.6 compiler.
        + Add support for illumos; tested on OpenIndiana Hipster 2022.03
        + Add support for NetBSD; tested on NetBSD/amd64 9.2-stable with
          the system provided GCC and Clang from binary packages; compiling
          `CC=clang LTO=1` requires the LLVM LLD linker `ld.lld` installed
        + Add support for IBM AIX 7+; tested on IBM AIX 7.2 and IBM AIX 7.3
          with GNU GCC (8, 9, 10, 11), IBM XL C/C++ V16.1+ (gxlc, xlclang),
          and IBM Open XL C/C++ V17.1+ using ncurses from IBM's AIX Toolbox;
          AIX builds default to 64-bit (on 64-bit systems) when using a
          supported compiler; the environment variable `MAIXBITS` can be set
          to `32` or `64` to force compilation of a 32-bit or 64-bit binary
        + Various portability improvements (portable BSD getopt, warn, etc.)
        + Reorganize source tree to better separate logical components