@@ -1,4 +1,8 @@
-OpenVi 7.0.16 -> OpenVi 7.1.17-dev: Sat Apr 9 21:00:26 2022
+OpenVi 7.0.16 -> OpenVi 7.1.17: Sun Apr 24 07:57:29 2022
+        + In v_event_get check qp->output for NULL before passing to
+          e_memcmp(); other users of qp->output already include a NULL check;
+          avoids a crash when cursor key support is disabled in cl/cl_term.c;
+          from Jeremy Mates; ok tb@
         + Check tkp->output != NULL before taking strlen for both command
           mappings and input mappings; this adds a missing check for command
           mappings and simplifies the input mappings; ok millert@
